My reaction to the Floating Sheep Manifesto

--- a/Module-01/Index.html
+++ b/Module-01/Index.html
@@ -6,7 +6,15 @@
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 </head>
 <body>
-<h1>A basic HTML template</h1>
-    <p>This is the beginning of my long and wonderful journey into JavaScript programming and mapping</p>
+<h1>Reaction to the Floating Sheep Manifesto</h1>
+    <p>The Floating Sheet Manifesto is an interesting essay that introduces a brief history of maps and discusses three schools of thought about maps. The authors who are geographically seperated in place of residence, are tied by a common thread; the University of Kentucky. </p>
+    <p>As a student of NewMaps Plus, I've been asked to comment on the essay and indicate which of the three viewpoints resinates most with me and why.  Here are my thoughts.</p>
+    <p>While each viewpoint is very different, I understand and appreciate all of them. The essay discusses strengths and weaknesses but I think most importantly, opens with a history of mapping and mentions how technology has changed mapping over the years. I believe the viewpoints are an expected result of the vast changes and progession in our technology and society as a whole. 
+    <p>Maps are more than a geographical representation of something, they tell a story, are biased and limited by the people, place and space by which they were developed. To believe that only one of the viewpoints in the end-all, be-all of maps, is extremely narrowed-minded. A map can not represent all things in complete accuracy.  It is somehow influenced, whether intentionally or unintentionally by the map maker.</p>
+    <p>At this point, I really dont have any priorites in terms of a mapping career other than to attempt to learn and master the material taught in this course. That in and of itself, is a huge challenge for me considering I haven't been to school in 20 years and am behind in the technology world and have no knowledge or background in anything technology-related nor do I know much about Geography other than I know I've always loved maps.  I have always enjoyed studying them because of my love of travel. 
+    <p>In fact, my current career has nothing to do with mapping; however, I would love to have a job that alloyed me to travel and explore! So, I'm hopeful that I'll gain enough knowledge in this program combined with my current professional background to maybe work for National Geographic and travel the world.</p>
+    <p>If I have to choose one of points, I would say point four; "Pretty maps are better than ugly maps but ugly maps will do in a pinch" would be the one I find the most interesting or should I say, the one I agree with most.  Because I'm not a professional cartographer and not familiar with all the rules of what defines a good map, I agree that if it serves the intended purpose, then it is effective and that's all that should matter. 
+    <p>However, having a love of art and being an amateur artist and somewhat of a perfectionist, I do have things which are eye-appealing and therefore, understand a cartographer's viewpoint about why a map should be pretty and adhere to professional cartographer's standards.</p>
+    <p>There's one last comment I'd like to make. I really enjoyed the saterical style used by the authors. It made it fun and much more interesting to read than a typical scholarly piece!</p>
 </body>
 </html>
