--- a/Module-02/lab-02/index.html
+++ b/Module-02/lab-02/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8 />
-    <title>MAP672 Module 2 Template</title>
+    <title>MAP672 Module 2</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <style>
