--- a/Module-01/Index.html
+++ b/Module-01/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>A basic HTML template</title>
+<title>Lab 01</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 </head>
 <body>
