--- a/module-05/lab-05/lab-05-data/index.html
+++ b/module-05/lab-05/lab-05-data/index.html
@@ -84,8 +84,8 @@
     // begin writing/editing Lab 05 code here
 
     var lexArea = Number(prompt("Enter data", "Enter the area of Lexington in square miles"));
-    // create a second variable to collect a second city's area here
-    // create a third variable to collect a third city's area here
+    var frankArea = Number(prompt("Enter data", "Enter the area of Frankfort in square miles"));
+    var bowlgArea = Number(prompt("Enter data", "Enter the area of Bowling Green in square miles"));
 
     prepareData(lexArea); // modify this function call to pass all three variables
 
